--- a/styles.css
+++ b/styles.css
@@ -7,22 +7,63 @@ html, body {
 }
 
 body {
-  background-image: url('images/bg-pattern-top-mobile.svg');
-  background-repeat: no-repeat;
   font-family: 'Spartan', sans-serif;
-}
-
-div.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 
 .header h1{
   color: hsl(300, 43%, 22%);
 }
 
+.subtitle p {
+  color: hsl(303, 10%, 53%);
+  line-height: 1.8em;
+  font-weight: 400;
+}
+
+.text-cards .user-info {
+  height: 5rem;
+  width: 12rem;
+  padding: 0;
+  margin: 1rem 0;
+  display: grid;
+  grid-template-columns: .5fr 1fr;
+  grid-template-rows: .5fr .5fr;
+  grid-template-areas: 
+  "img user "
+  "img verified ";
+  grid-gap: 0 0;
+}
+
+.text-cards img {
+  grid-area: img;
+  border-radius: 50%;
+  width: 3rem;
+  height: auto;
+  align-self: center;
+}
+
+.text-cards .user {
+  grid-area: user;
+  align-self: end;
+  font-size: .8rem;
+  font-weight: bold;
+  margin: 0 0 .25rem;
+  padding: 0;
+}
+
+.text-cards .verified {
+  grid-area: verified;
+  align-self: start;
+  font-size: .8rem;
+  font-weight: 400;
+  color: hsl(333, 80%, 67%);
+  margin: .25rem 0;
+  padding: 0;
+
+}
+
 .attribution {
+  width: 100%;
   font-size: 11px;
   text-align: center;
 }
@@ -30,7 +71,18 @@ div.container {
   color: hsl(228, 45%, 44%);
 }
 
-@media screen and (min-width: 375px) {
+/*Phone screen*/
+@media screen and (min-width: 375px) and (max-width: 1439px) {
+  body {
+    background: url('images/bg-pattern-top-mobile.svg') no-repeat;
+  }
+
+  div.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
   .header h1{
     font-size: 2rem;
     text-align: center;
@@ -38,13 +90,10 @@ div.container {
   }
 
   .subtitle p {
-    color: hsl(303, 10%, 53%);
     font-size: .95rem;
     margin: 1rem .8rem 2rem;
     padding: 0;
     text-align: center;
-    font-weight: 400;
-    line-height: 1.8em;
   }
 
   div.rating-cards div{
@@ -81,9 +130,9 @@ div.container {
   div.text-cards div {
     background-color: hsl(300, 43%, 22%);
     color: white;
+    border-radius: 8px; 
     margin: 1rem 5%;
     padding: 1rem 2.5rem 2.5rem;
-    border-radius: 8px; 
     height: 15rem;
   }
 
@@ -134,4 +183,64 @@ div.container {
     font-weight: 400;
     line-height: 1.8rem;
   }
+}
+
+/*Desktop screen*/
+@media screen and (min-width: 1400px) {
+  body {
+    background: url("images/bg-pattern-top-desktop.svg") no-repeat left top, 
+    url("images/bg-pattern-bottom-desktop.svg") no-repeat bottom right;
+  }
+  .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: 
+    "title-card rating-cards"
+    "text-cards text-cards";
+    margin: 10rem;
+  }
+
+  div.title-card {
+    grid-area: title-card;
+  }
+
+  div.rating-cards {
+    grid-area: rating-cards;
+    display: flex;
+    flex-direction: column;
+  }
+
+  div.rating-cards div {
+    display: flex;
+    flex-direction: row;
+    background-color: hsl(300, 24%, 96%);
+    border-radius: 6px;
+  }
+
+  div.rating-cards div:nth-of-type(1) {
+    margin: 1rem 5rem;
+  }
+
+  div.rating-cards div:nth-of-type(2) {
+    margin: 2rem 5rem;
+  }
+
+  div.rating-cards div:nth-of-type(3) {
+    margin: 2rem 5rem;
+  }
+
+  div.text-cards {
+    grid-area: text-cards;
+    display: flex;
+    flex-direction: row;
+  }
+  div.text-cards div {
+    background-color: hsl(300, 43%, 22%);
+    color: white;
+    border-radius: 8px; 
+    margin: 1rem;
+    padding: 1rem 2.5rem 2.5rem;
+  }
+
 }
