--- a/styles.css
+++ b/styles.css
@@ -198,17 +198,29 @@ body {
     grid-template-areas: 
     "title-card rating-cards"
     "text-cards text-cards";
-    margin: 10rem;
+    margin: 5rem 12rem 1rem;
   }
 
   div.title-card {
     grid-area: title-card;
+    width: 80%;
+  }
+
+  .title-card h1 {
+    font-size: 3rem;
+    width: 80%;
+  }
+
+  .title-card p {
+    width: 95%;
   }
 
   div.rating-cards {
     grid-area: rating-cards;
     display: flex;
     flex-direction: column;
+    align-self: center;
+    justify-self: center;
   }
 
   div.rating-cards div {
@@ -216,31 +228,59 @@ body {
     flex-direction: row;
     background-color: hsl(300, 24%, 96%);
     border-radius: 6px;
+    width: 75%;
+    padding: .5rem;
+    margin: 1rem 5rem 1rem 0;
   }
-
-  div.rating-cards div:nth-of-type(1) {
-    margin: 1rem 5rem;
-  }
-
+  /*Create horizontal staggered effect for star ratings*/
   div.rating-cards div:nth-of-type(2) {
-    margin: 2rem 5rem;
+    margin-left:5rem;
   }
 
   div.rating-cards div:nth-of-type(3) {
-    margin: 2rem 5rem;
+    margin-left:10rem;
+  }
+
+  .rating-cards span {
+    margin: auto 1rem;
+  }
+
+  .rating-cards p {
+    color: hsl(300, 43%, 22%);
+    font-weight: 600;
+    font-size: .8rem;
   }
 
   div.text-cards {
     grid-area: text-cards;
     display: flex;
     flex-direction: row;
+    height: 20rem;
+    margin-top: 3rem;
+    align-content: center;
+    justify-content: space-between;
   }
   div.text-cards div {
     background-color: hsl(300, 43%, 22%);
     color: white;
     border-radius: 8px; 
-    margin: 1rem;
-    padding: 1rem 2.5rem 2.5rem;
+    padding: .5rem 2rem;
+    width: 22rem;
+    font-size: .8rem;
+    line-height: 2;
+    margin-right: 1.5rem;
+  }
+
+  /*Create vertical staggered effect for text reviews*/
+  div.text-cards div:nth-of-type(1) {
+    align-self: flex-start;
+  }
+  div.text-cards div:nth-of-type(2) {
+    align-self: center;
+  }
+
+  div.text-cards div:nth-of-type(3) {
+    align-self: flex-end;
   }
 
 }
